--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
     <dependencies>
 
       <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.33</version>
+      </dependency>
+
+
+      <dependency>
         <groupId>com.twilio.sdk</groupId>
         <artifactId>twilio</artifactId>
         <version>10.6.0</version>
