--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,10 @@
     <groupId>com.tuempresa.app</groupId>
     <artifactId>tu-app</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <dependencies>
       <dependency>
         <groupId>mysql</groupId>
